# WhatTime

./: .gitignore  README.MD  README.md  WhatTime.json  build.gradle  pyproject.toml  requirements.txt
.github/workflows/: auto-release.yml  release.yml
com/btwrobotics/whattime/frc/whattime/: maven-metadata-local.xml
com/btwrobotics/whattime/frc/whattime/v2026.1.14/: whattime-v2026.1.14.module  whattime-v2026.1.14.pom
com/btwrobotics/whattime/frc/whattime/v2026.1.14-beta.1/: whattime-v2026.1.14-beta.1.module  whattime-v2026.1.14-beta.1.pom
com/btwrobotics/whattime/frc/whattime/v2026.1.15/: whattime-v2026.1.15.module  whattime-v2026.1.15.pom
com/btwrobotics/whattime/frc/whattime/v2026.1.15-beta.3/: whattime-v2026.1.15-beta.3.module  whattime-v2026.1.15-beta.3.pom
com/btwrobotics/whattime/frc/whattime/v2026.1.16-beta.1/: whattime-v2026.1.16-beta.1.module  whattime-v2026.1.16-beta.1.pom
com/btwrobotics/whattime/frc/whattime/v2026.1.16-beta.10/: whattime-v2026.1.16-beta.10.module  whattime-v2026.1.16-beta.10.pom
com/btwrobotics/whattime/frc/whattime/v2026.1.16-beta.11/: whattime-v2026.1.16-beta.11.module  whattime-v2026.1.16-beta.11.pom
src/main/java/com/btwrobotics/WhatTime/frc/: FlywheelPair.java
src/whattime_frc/: __init__.py
src/whattime_frc/DriverStation/: AllianceManager.py  __init__.py
src/whattime_frc/Motor/: MotorWrapper.py  __init__.py
src/whattime_frc/MotorManagers/: Motor.py  MotorGroup.py  __init__.py
src/whattime_frc/YearlyMethods/: __init__.py
src/whattime_frc/YearlyMethods/Rebuilt/: RebuiltHubManager.py  __init__.py
(+48 files in other folders)
